[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram_monitor"
version = "3.6"
description = "Track Instagram users' activities, profile changes and capture content with beautiful dashboards and instant notifications"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.9"
dependencies = [
  "instaloader>=4.15.1",
  "requests>=2.0",
  "curl_cffi>=0.7",
  "python-dateutil>=2.8",
  "pytz>=2020.1",
  "tzlocal>=4.0",
  "python-dotenv>=0.19",
  "tqdm>=4.0",
  "flask>=2.0",
  "jinja2>=3.0",
  "rich>=12.0",
  "colorama>=0.4.6; platform_system == 'Windows'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["instagram", "monitoring", "tracking", "real-time", "osint", "instaloader"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Needed only to import Chrome/Brave/Chromium sessions (--browser chrome|brave|chromium); macOS and Linux only
browser = ["pycookiecheat>=0.8"]

[project.urls]
Homepage = "https://github.com/misiektoja/instagram_monitor"
Documentation = "https://misiektoja.github.io/instagram_monitor/"
Source   = "https://github.com/misiektoja/instagram_monitor"
Changelog= "https://github.com/misiektoja/instagram_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
instagram_monitor = "instagram_monitor:main"

[tool.setuptools]
py-modules = ["instagram_monitor"]
include-package-data = true

[tool.setuptools.data-files]
"instagram_monitor_data/templates" = ["templates/*.html"]
"instagram_monitor_data" = ["instagram_profile_pic_empty.jpg"]

[tool.pytest.ini_options]
# Run the in-repo source, never an installed copy, by putting the project root first on sys.path
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
